Added styling to footer

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <!-- My CSS -->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Assets\style\style.css">
 
     <!-- Bootstrap 4 CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -28,7 +28,7 @@
       </ul>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <li><a class="nav-link" href="contact.html" tabindex="1">Contact</a></li>
+                <li><a class="active nav-link" href="contact.html" tabindex="1">Contact</a></li>
                 <li><a class="nav-link" href="portfolio.html" tabindex="1">Portfolio</a></li>
                 <li><a class="nav-link" href="index.html" tabindex="1">About</a></li>
             </li>
