--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Assets\style\style.css">
 
     <!-- Bootstrap 4 CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -29,7 +29,7 @@
         <ul class="navbar-nav">
             <li class="nav-item">
                 <li><a class="nav-link" href="contact.html" tabindex="1">Contact</a></li>
-                <li><a class="nav-link" href="portfolio.html" tabindex="1">Portfolio</a></li>
+                <li><a class="active nav-link" href="portfolio.html" tabindex="1">Portfolio</a></li>
                 <li><a class="nav-link" href="index.html" tabindex="1">About</a></li>
             </li>
         </ul>
@@ -60,22 +60,6 @@
                 </header>
             </div>
         </article>
-
-        <!--Sidebar (May or may not be used)
-        <article class="col-sm-4">
-            <aside class="card" style="width: 18rem;">
-                <header class="card-header">
-                  <div class="page-header">SideBar</div>
-                </header>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Cras justo odio</li>
-                  <li class="list-group-item">Dapibus ac facilisis in</li>
-                  <li class="list-group-item">Vestibulum at eros</li>
-                </ul>
-            </aside>
-        </article>-->
-
-        
 
     </section>
  </section>
