--- a/portfolio.html
+++ b/portfolio.html
@@ -50,11 +50,11 @@
                         <hr>
                     </div>
                 <article class="card-body" >
-                    <img src="https://via.placeholder.com/350.png/09f/fff" alt="..." class="img-fluid img-thumbnail rounded float-left px-2 mx-2 my-2">
-                    <img src="https://via.placeholder.com/350.png/09f/fff" alt="..." class="img-fluid img-thumbnail rounded float-left px-2 mx-2 my-2">
-                    <img src="https://via.placeholder.com/350.png/09f/fff" alt="..." class="img-fluid img-thumbnail rounded float-left px-2 mx-2 my-2">
-                    <img src="https://via.placeholder.com/350.png/09f/fff" alt="..." class="img-fluid img-thumbnail rounded float-left px-2 mx-2 my-2">
-                    <img src="https://via.placeholder.com/350.png/09f/fff" alt="..." class="img-fluid img-thumbnail rounded float-left px-2 mx-2 my-2">
+                    <img src="Assets\Images\dazrin.github.io-AboutMe350.jpg" alt="About Me Webpage" class="img-fluid img-thumbnail rounded float-left px-2 mx-2 my-2">
+                    <img src="Assets\Images\daftpunk350.jpg" alt="A Daft Punk Fanpage" class="img-fluid img-thumbnail rounded float-left px-2 mx-2 my-2">
+                    <img src="Assets\Images\myles&sherman350.jpg" alt="A webpage featuring 2 cats" class="img-fluid img-thumbnail rounded float-left px-2 mx-2 my-2">
+                    <img src="Assets\Images\scratchgame350.jpg" alt="..." class="img-fluid img-thumbnail rounded float-left px-2 mx-2 my-2">
+                    <img src="Assets\Images\boothedog350.jpg" alt="..." class="img-fluid img-thumbnail rounded float-left px-2 mx-2 my-2">
                     <img src="https://via.placeholder.com/350.png/09f/fff" alt="..." class="img-fluid img-thumbnail rounded float-left px-2 mx-2 my-2">
                 </article>
                 </header>
