attempting to provide functionality to the contact me form

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             <!--Grid column-->
             <div class="col-md-9 mb-md-0 mb-5">
                 <!--Form-->
-              <form id="contact-form" name="contact-form" action="https://formspree.io/f/{form_id}" method="POST">
+              <form id="contact-form" name="contact-form" action="https://formspree.io/f/xgepojdo}" method="POST">
 
                 <!--Grid row-->
                 <div class="row">
@@ -105,15 +105,6 @@
                   </div>
                 </div>
               </form>
-
-              <!--action="https://formspree.io/f/{form_id}"
-                        <div class="row text-md-right text-sm-center">
-                <div class="col-12 col-sm-12 col-md-6 mx-auto">
-                    <button type="submit" class="btn btn-primary mb-2 hidden">
-                        SUBMIT
-                    </button>
-                </div>
-            </div>-->
 
               <div class="text-center text-md-left">
                 <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
