--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             <!--Grid column-->
             <div class="col-md-9 mb-md-0 mb-5">
                 <!--Form-->
-              <form id="contact-form" name="contact-form" action="https://formspree.io/f/xgepojdo}" method="POST">
+              <form id="contact-form" name="contact-form" action="https://formspree.io/f/xgepojdo" method="POST">
 
                 <!--Grid row-->
                 <div class="row">
