pushing porfolio updates

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap 4 CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>My Responsive Portfolio</title>
+    <title>Dazrin Tioseco - Portfolio</title>
 </head>
 <body>
     <!--Nav Bar-->
@@ -117,26 +117,11 @@
             </div>
         </article>
 
-        <!--Sidebar (May or may not be used)-->
-        <article class="col-sm-4">
-            <aside class="card" style="width: 18rem;">
-                <header class="card-header">
-                  <div class="page-header">SideBar</div>
-                </header>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Cras justo odio</li>
-                  <li class="list-group-item">Dapibus ac facilisis in</li>
-                  <li class="list-group-item">Vestibulum at eros</li>
-                </ul>
-            </aside>
-        </article>
-
         <!--Footer-->
         <footer class="bg-dark text-white mt-4 fixed-bottom">
             <div class="container py-1">
                 <div class="row align-items-center justify-content-center">
                     <div class="col-lg-12 col-md-12 text-center">
-                        <h5 class="follow">Follow me:</h5>
                         <a href="https://github.com/dazrin"><i class="fa fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/dazrin-tioseco/"><i class="fa fa-linkedin"></i></a>
                         <a href="https://twitter.com/dazrinDev"><i class="fa fa-twitter"></i></a>
