Attempting to fix images

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,9 +98,9 @@
                   <div class="card h-100">
                     <div class="card-body">
                       <a href="https://dazrin.github.io/Day-Planner/" target="_blank">
-                        <img src="Assets\Images\dayplanner.png" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block  zoom-less" alt="Travel website">
+                        <img src="Assets\Images\dayplanner.png" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block  zoom-less" alt="Work Day Planner App">
                       </a>
-                      <h5 class="card-title">Work Day Scheduler</h5>
+                      <h5 class="card-title">Work Day Planner</h5>
                       <p class="card-text">A simple work-day planner web application that allows a user to input text to remind themselves of tasks to do at each hour of the work day.
                         Pressing the save button to the side will store the text data to the browser's local storage so it can be viewed at a later time.
                        Built using HTML, CSS, and Javascript.</p>
@@ -122,7 +122,7 @@
                   <div class="card h-100">
                     <div class="card-body">
                       <a href="https://dazrin.github.io/Password-Generator/" target="_blank">
-                        <img src="Assets\Images\password-gen.png" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block  zoom-less" alt="Day Planner">
+                        <img src="Assets\Images\password-gen.png" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block  zoom-less" alt="Password Generator App">
                       </a>
                       <h5 class="card-title">Password Generator</h5>
                       <p class="card-text">A simple password generator application that uses browser prompts to create a criteria used to generate a password.
@@ -145,7 +145,7 @@
                   <div class="card h-100">
                     <div class="card-body">
                       <a href="https://dazrin.github.io/Adv-Pwd-Generator/" target="_blank">
-                      <img src="Assets\Images\adv-password-gen.png" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block zoom-less" alt="Shopper application">
+                      <img src="Assets\Images\adv-password-generator.png" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block zoom-less" alt="Advanced Password Generator App">
                       </a>
                       <h5 class="card-title">Advanced Password Generator</h5>
                       <p class="card-text">A password generator with a clean UI allowing a user to generate a password using various conditions. 
@@ -168,7 +168,7 @@
                   <div class="card h-100">
                     <div class="card-body">
                       <a href="https://dazrin.github.io/Coding-Quiz/" target="_blank">
-                        <img src="Assets\Images\coding-quiz.png" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block zoom-less" alt="Dive Calculator">
+                        <img src="Assets\Images\coding-quiz.png" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block zoom-less" alt="Coding Quiz App">
                       </a>
                       <h5 class="card-title">Coding Quiz</h5>
                       <p class="card-text">A javascript coding quiz web application to test a user's knowledge of javascript. 
