Added sidebar information

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap 4 CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Dazrin Tioseco - Portfolio</title>
+    <title>My Responsive Portfolio</title>
 </head>
 <body>
     <!--Nav Bar-->
@@ -116,6 +116,20 @@
                 </header>
             </div>
         </article>
+
+        <!--Sidebar-->
+        <article class="col-sm-4">
+          <aside class="card" style="width: 18rem;">
+              <header class="card-header">
+                <div class="page-header"><strong>Dazrin Tioseco</strong></div>
+              </header>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"><strong>Email:</strong> dazrin.tioseco@gmail.com</li>
+                <li class="list-group-item"><strong>Phone:</strong> 778-865-5557</li>
+                <li class="list-group-item"><strong>Resume:</strong> <a>Resume</a></li>
+              </ul>
+          </aside>
+      </article>
 
         <!--Footer-->
         <footer class="bg-dark text-white mt-4 fixed-bottom">
