--- a/index.html
+++ b/index.html
@@ -60,6 +60,19 @@
             </div>
         </article>
 
+                <!--Sidebar-->
+                <article class="col-sm-4">
+                    <aside class="card" style="width: 18rem;">
+                        <header class="card-header">
+                          <div class="page-header"><strong>Dazrin Tioseco</strong></div>
+                        </header>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item"><strong>Email:</strong> dazrin.tioseco@gmail.com</li>
+                          <li class="list-group-item"><strong>Phone:</strong> 778-865-5557</li>
+                          <li class="list-group-item"><strong>Resume:</strong> <a>Resume</a></li>
+                        </ul>
+                    </aside>
+                </article>
 
     </section>
  </section>
