Added download link to Resume

--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
               <ul class="list-group list-group-flush">
                 <li class="list-group-item"><strong>Email:</strong> dazrin.tioseco@gmail.com</li>
                 <li class="list-group-item"><strong>Phone:</strong> 778-865-5557</li>
-                <li class="list-group-item"><strong>Resume:</strong> <a>Resume</a></li>
+                <li class="list-group-item"><strong>Resume:</strong> <a href="Assets\Dazrin Tioseco - Resume Nov 2020.pdf" download>Download</a></li>
               </ul>
           </aside>
       </article>
