Updated portfolio page with new projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,18 +53,62 @@
                 <div class="col mb-4">
                   <div class="card h-100">
                     <div class="card-body">
-                      <a href="https://github.com/ivanduranic/date-night-planner" target="_blank">
-                        <img src="Assets\Images\datenightplanner.png" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block  zoom-less" alt="Date Night Planner App">
+                      <a href="https://github.com/dazrin/Note-Taker" target="_blank">
+                        <img src="https://raw.githubusercontent.com/dazrin/Note-Taker/master/notetakerdemo.gif" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block  zoom-less" alt="Password Generator App">
                       </a>
-                      <h5 class="card-title">Date Night Planner</h5>
-                      <p class="card-text">A web application to help users plan their date nights by helping them find a theatre close to their location, a movie playing at that theatre, and a showtime to watch at. A map is displayed to help guide the user to where they should go, and displays their information to the screen. Uses Mapbox' API for geolocation data, and Gracenote's API to generate a list of theatres, the movies playing and their showtimes. Firebase is used for store login data.</p>
+                      <h5 class="card-title">Note Taker Application</h5>
+                      <p class="card-text">This is a note taker web application that allows users to create notes, save them for future viewing, and delete them. This application's back end was created using nodeJS and express. The application is deployed using Heroku.</p>
                     </div>
                     <div class="card-footer bg-transparent">
-                      <a href="https://ivanduranic.github.io/date-night-planner/" target="_blank" class="card-link text-info">
+                      <a href="https://desolate-crag-38228.herokuapp.com/" target="_blank" class="card-link text-info">
                         <i class="fas fa-mouse-pointer text-secondary"></i>
                         Website
                       </a>
-                      <a href="https://github.com/ivanduranic/date-night-planner" target="_blank" class="card-link text-info">
+                      <a href="https://github.com/dazrin/Note-Taker" target="_blank" class="card-link text-info">
+                        <i class="fab fa-github-square text-secondary"></i>
+                        GitHub
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col mb-4">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <a href="https://github.com/dazrin/employee-management-system" target="_blank">
+                        <img src="https://camo.githubusercontent.com/89c49520a6a00ee8c6121559f243840e4a10fca75bbf3091a3fe43650b216427/68747470733a2f2f692e696d6775722e636f6d2f655459487178702e706e67" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block  zoom-less" alt="Date Night Planner App">
+                      </a>
+                      <h5 class="card-title">Employee Management System</h5>
+                      <p class="card-text">This is a command line interface application developed using nodeJS and mySQL that acts as a content management system for employee data. This application has functionality in place to allow a user to create, view, and update employees, roles, and departments for organizational purposes.</p>
+                    </div>
+                    <div class="card-footer bg-transparent">
+                      <a href="https://drive.google.com/file/d/1_7eidIQ073_uN9ssll9_4f1U5OKRpVlb/view" target="_blank" class="card-link text-info">
+                        <i class="fas fa-mouse-pointer text-secondary"></i>
+                        Video Demonstration
+                      </a>
+                      <a href="https://github.com/dazrin/employee-management-system" target="_blank" class="card-link text-info">
+                        <i class="fab fa-github-square text-secondary"></i>
+                        GitHub
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col mb-4">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <a href="https://github.com/dazrin/MERNG-twitterClone" target="_blank">
+                        <img src="https://camo.githubusercontent.com/5d4e73414439ac05661c3fc4b8ff2804d59639ca85e21108b88dd90fdfdfbd8e/68747470733a2f2f692e696d6775722e636f6d2f6f62494f77695a2e706e67" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block  zoom-less" alt="Twitter Clone">
+                      </a>
+                      <h5 class="card-title">Twitter Clone</h5>
+                      <p class="card-text">This is a twitter clone web application that is built using the MERN (Mongo, Express, React, Node) stack but additionally uses GraphQL to act as a middle-man for the code to talk to the mongoDB database.</p>
+                    </div>
+                    <div class="card-footer bg-transparent">
+                      <a href="" target="_blank" class="card-link text-info">
+                        <i class="fas fa-mouse-pointer text-secondary"></i>
+                        Website
+                      </a>
+                      <a href="https://github.com/dazrin/MERNG-twitterClone" target="_blank" class="card-link text-info">
                         <i class="fab fa-github-square text-secondary"></i>
                         GitHub
                       </a>
@@ -121,19 +165,18 @@
                 <div class="col mb-4">
                   <div class="card h-100">
                     <div class="card-body">
-                      <a href="https://dazrin.github.io/Password-Generator/" target="_blank">
-                        <img src="Assets\Images\password-gen.png" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block  zoom-less" alt="Password Generator App">
+                      <a href="https://github.com/dazrin/Good-README-Generator" target="_blank">
+                        <img src="https://camo.githubusercontent.com/e046bf82b2d274102f9edab8df6c53eb4cfedb8509d1c29988a54d3d586d1b7c/68747470733a2f2f692e696d6775722e636f6d2f6b657a6e4c736b2e706e67" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block  zoom-less" alt="Password Generator App">
                       </a>
-                      <h5 class="card-title">Password Generator</h5>
-                      <p class="card-text">A simple password generator application that uses browser prompts to create a criteria used to generate a password.
-                         The password can then be copied to the clipboard with the click of a button. Built using HTML, CSS, and Javascript.</p>
+                      <h5 class="card-title">README File Generator</h5>
+                      <p class="card-text">A command line application that takes in data by asking the user a series of questions in order to generate a good README file for a project.</p>
                     </div>
                     <div class="card-footer bg-transparent">
-                      <a href="https://dazrin.github.io/Password-Generator/" target="_blank" class="card-link text-info">
+                      <a href="https://github.com/dazrin/Good-README-Generator" target="_blank" class="card-link text-info">
                         <i class="fas fa-mouse-pointer text-secondary"></i>
                         Website
                       </a>
-                      <a href="https://github.com/dazrin/Password-Generator" target="_blank" class="card-link text-info">
+                      <a href="https://github.com/dazrin/Good-README-Generator" target="_blank" class="card-link text-info">
                         <i class="fab fa-github-square text-secondary"></i>
                         GitHub
                       </a>
@@ -167,20 +210,18 @@
                 <div class="col mb-4">
                   <div class="card h-100">
                     <div class="card-body">
-                      <a href="https://dazrin.github.io/Coding-Quiz/" target="_blank">
-                        <img src="Assets\Images\coding-quiz.png" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block zoom-less" alt="Coding Quiz App">
+                      <a href="https://github.com/dazrin/Team-Profile-Generator" target="_blank">
+                        <img src="https://camo.githubusercontent.com/2a55b54973990aae362a80ed8070f54581cfcb1280f345bbc36c6b862a8394a8/68747470733a2f2f692e696d6775722e636f6d2f344b446544337a2e706e67" class="card-img-top w-50 float-sm-left mr-4 btn mx-auto d-block zoom-less" alt="Team Profile App">
                       </a>
-                      <h5 class="card-title">Coding Quiz</h5>
-                      <p class="card-text">A javascript coding quiz web application to test a user's knowledge of javascript. 
-                        Uses a timer and css variables to change the colors of the elements based on if an answer was incorrect or not. 
-                        Built using HTML, CSS, and Javascript.</p>
+                      <h5 class="card-title">Team-Profile-Generator</h5>
+                      <p class="card-text">This is a command line application that takes in data from the user to create 'Team Member' objects using an Employee class which are pushed into an array and displayed to the user by generating an HTML webpage. This application was made using nodeJS and uses Jest for unit testing.</p>
                     </div>
                     <div class="card-footer bg-transparent">
-                      <a href="https://dazrin.github.io/Coding-Quiz/" target="_blank" class="card-link text-info">
+                      <a href="https://drive.google.com/file/d/1qOuW4UOYjOwBq1E1HrxjnABwc3HIPzRw/view" target="_blank" class="card-link text-info">
                         <i class="fas fa-mouse-pointer text-secondary"></i>
                         Website
                       </a>
-                      <a href="https://github.com/dazrin/Coding-Quiz" target="_blank" class="card-link text-info">
+                      <a href="https://github.com/dazrin/Team-Profile-Generator" target="_blank" class="card-link text-info">
                         <i class="fab fa-github-square text-secondary"></i>
                         GitHub
                       </a>
